--- a/header.tex
+++ b/header.tex
@@ -3,11 +3,7 @@
 \usepackage{siunitx}
 
 %% Glossary
-\newacronym{WEC}{WEC}{wave energy converter}
-\newacronym{PM}{PM}{Pierson-Moskowitz}
-\newacronym{PTO}{PTO}{power take-off}
-\newacronym{KC}{KC}{Keulegan-Carpenter}
-\newacronym{MPPT}{MPPT}{maximum power point tracking}
+\include{glossary}
 
 
 %% Fixes long table error with two columns
