--- a/article.tex
+++ b/article.tex
@@ -128,7 +128,7 @@
 \IfFileExists{xurl.sty}{\usepackage{xurl}}{} % add URL line breaks if available
 \urlstyle{same}
 \hypersetup{
-  pdftitle={Test author affiliations with lua filters},
+  pdftitle={A complete but succinct description of work using relevant important keywords while being snappy when possible},
   pdfauthor={Jane Doe,1,2,; John Q. Doe,2},
   hidelinks,
   pdfcreator={LaTeX via pandoc}}
