--- a/header.tex
+++ b/header.tex
@@ -3,7 +3,11 @@
 \usepackage{siunitx}
 
 %% Glossary
-\include{glossary}
+\newacronym{WEC}{WEC}{wave energy converter}
+\newacronym{PM}{PM}{Pierson-Moskowitz}
+\newacronym{PTO}{PTO}{power take-off}
+\newacronym{KC}{KC}{Keulegan-Carpenter}
+\newacronym{MPPT}{MPPT}{maximum power point tracking}
 
 
 %% Fixes long table error with two columns
