added some things

--- a/ref.bib
+++ b/ref.bib
@@ -13,3 +13,13 @@
 }
                   
 @Comment RELATED WORK
+
+@article{mermin1989s,
+  title={What’s wrong with these equations},
+  author={Mermin, Nathaniel David},
+  journal={Physics Today},
+  volume={42},
+  number={10},
+  pages={9},
+  year={1989}
+}
