updated tex template

--- a/article.tex
+++ b/article.tex
@@ -95,13 +95,7 @@
 \usepackage[nopostdot,nogroupskip,nonumberlist]{glossaries}
 \usepackage{siunitx}
 
-%% Glossary
-\newacronym{WEC}{WEC}{wave energy converter}
-\newacronym{PM}{PM}{Pierson-Moskowitz}
-\newacronym{PTO}{PTO}{power take-off}
-\newacronym{KC}{KC}{Keulegan-Carpenter}
-\newacronym{MPPT}{MPPT}{maximum power point tracking}
-
+\input{glossary}
 
 %% Fixes long table error with two columns
 %% \makeatletter
